Ui fixes for badge, alert, forms, color contrast, improve text tooltips and remove session button in about session modal

--- a/client/src/features/session/components/options/SessionClassOption.module.scss
+++ b/client/src/features/session/components/options/SessionClassOption.module.scss
@@ -107,3 +107,7 @@
     background-color: #e4e7ea80;
   }
 }
+
+.form-select {
+  --bs-border-color: var(--bs-rk-border-input);
+}
