--- a/client/src/styles/components/_renku_general.scss
+++ b/client/src/styles/components/_renku_general.scss
@@ -113,3 +113,7 @@ svg:focus-visible {
     height: auto;
   }
 }
+
+.text-muted {
+  --bs-secondary-color: var(--bs-rk-text-light);
+}
